--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://{0wa1da}.github.io/{LibraryApp}",
+  "homepage": "http://0wa1da.github.io/LibraryApp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
